--- a/templates/Usage-CPU.html
+++ b/templates/Usage-CPU.html
@@ -23,7 +23,7 @@
         <div class="col-10 ">
             <div class="card">
                 <div class="card-body border border-dark font-weight-bold">
-                    <h5>Rack A | Server: Lic-01</h5>
+                    <h5>Rack: {{ rack.Name }} | Server: {{ server.ServerName }}</h5>
                 </div>
             </div>
         </div>
