--- a/templates/Usage-Disk.html
+++ b/templates/Usage-Disk.html
@@ -29,7 +29,7 @@
         <div class="col-10 "> {# Rack & Server Names #}
             <div class="card">
                 <div class="card-body border border-dark font-weight-bold">
-                    <h5>{{ server.RackID }} | {{ server.ServerName }}</h5>
+                    <h5>Rack: {{ rack.Name }} | Server: {{ server.ServerName }}</h5>
                 </div>
             </div>
         </div>
@@ -118,14 +118,14 @@
                     </tr>
                     </thead>
                     <tbody>
-                        {% for d, u in zip(date, usage) %}
+                        {% for date, u, a, b, c, d in zip(date, usage, aUsage, bUsage, cUsage, dUsage) %}
                             <tr>
-                                <td>{{ d }}</td>
+                                <td>{{ date }}</td>
                                 <td>{{ u }}%</td>
-                                <td>{{ u }}%</td>
-                                <td>{{ u }}%</td>
-                                <td>{{ u }}%</td>
-                                <td>{{ u }}%</td>
+                                <td>{{ a }}%</td>
+                                <td>{{ b }}%</td>
+                                <td>{{ c }}%</td>
+                                <td>{{ d }}%</td>
                             </tr>
                         {% endfor %}
 
