--- a/templates/Usage-Ping.html
+++ b/templates/Usage-Ping.html
@@ -29,7 +29,7 @@
         <div class="col-10 "> {# Rack & Server Names #}
             <div class="card">
                 <div class="card-body border border-dark font-weight-bold">
-                    <h5>Fix This | {{ server.ServerName }}</h5>
+                    <h5>Rack: {{ rack.Name }} | Server: {{ server.ServerName }}</h5>
                 </div>
             </div>
         </div>
