--- a/templates/Usage-CPU.html
+++ b/templates/Usage-CPU.html
@@ -71,7 +71,9 @@
                 },
 
                 // Configuration options go here
-                options: {}
+                options: {
+                        legend: {display: false}
+                    }
             });
         </script>
     </div>
