--- a/templates/Usage-GPU.html
+++ b/templates/Usage-GPU.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="row text-center mt-3 ml-auto"> {# forms for chard date range | NOT CURRENTLY WORKING #}
-        <div class="col-10">
+        <div class="col-12">
             <form method="post">
                 {{ form.csrf_token }}
                 {{ render_field(form.startdate) }}
@@ -91,14 +91,16 @@
                     labels: [{% for d in date %} "{{ d }}", {% endfor %}], {# Dates #}
                     datasets: [{
                         label: 'My First dataset',
-                        backgroundColor: 'rgb(122,211,132)',
+                        backgroundColor: 'rgb(255,249,142)',
                         borderColor: 'rgb(0, 0, 0)',
                         data: [{% for u in usage %} "{{ u }}", {% endfor %}] {# Usages #}
                     }]
                 },
 
                 {# Configuration options go here #}
-                options: {}
+                options: {
+                        legend: {display: false}
+                    }
             });
         </script>
     </div>
