--- a/templates/Usage-Ping.html
+++ b/templates/Usage-Ping.html
@@ -39,12 +39,12 @@
 {#    </div>#}
     <div class="row text-center m-2"> {# Displays this servers RAM usage #}
         <div class="col-12">
-            <h2 class="text-danger"> Ping Status: <b>{{ ametric.PingLatency }}%</b></h2>
+            <h2 class="text-danger"> Ping Status: <b>{{ ametric.PingLatency }} ms - {{status}}</b></h2>
         </div>
     </div>
 
     <div class="row text-center mt-3 ml-auto"> {# forms for chard date range | NOT CURRENTLY WORKING #}
-        <div class="col-10">
+        <div class="col-12">
             <form method="post">
                 {{ form.csrf_token }}
                 {{ render_field(form.startdate) }}
@@ -92,14 +92,15 @@
                         labels: [{% for d in date %} "{{ d }}", {% endfor %}], {# Dates #}
                         datasets: [{
                             label: 'My First dataset',
-                            backgroundColor: 'rgb(255,249,142)',
+                            backgroundColor: 'rgb(122,211,132)',
                             borderColor: 'rgb(0, 0, 0)',
                             data: [{% for u in usage %} "{{ u }}", {% endfor %}] {# Usages #}
                         }]
                     },
-
                     {# Configuration options go here #}
-                    options: {}
+                    options: {
+                        legend: {display: false}
+                    }
                 });
             </script>
         </div>
