--- a/templates/RealTimeDataOverviewTemp.html
+++ b/templates/RealTimeDataOverviewTemp.html
@@ -15,7 +15,7 @@
         </div>
     </div>
 
-    <div class="row mt-3 text-center"> {# Home button & Rack & Server Names #}
+    <div class="mt-3 text-center"> {# Home button & Rack & Server Names #}
         <div class="row card-body border border-dark font-weight-bold">
             <div class="text-left">
                 <a class="btn btn-secondary btn-lg"  href="/" role="button">Home</a>
@@ -30,10 +30,9 @@
         <div class="col-12 ">
 
             <table class="table table-borderless table-secondary">
-                <thead>
-                <th colspan="12">Server Specifications</th>
-                </thead>
-                <thead>
+                <th colspan="12">
+                    Server Specifications
+                </th>
                 <tr> {# Spec's names #}
                     <th>Operating System</th>
                     <th>CPU | Cores</th>
@@ -43,21 +42,19 @@
                     <th>Building</th>
                     <th>Room</th>
                     <th>Last Updated</th>
-
                 </tr>
-                </thead>
                 <tbody>
-                <tr> {# Spec's Values #}
-                    <td>{{ server.Os }}</td>
-                    <td>{{ server.Cpu }} | {{ server.CpuCores }}</td>
-                    <td>{{ server.Gpu }}</td>
-                    <td>{{ server.Memory }}GB</td>
-                    <td>{{ server.Model }}</td>
-                    <td>{{ location.BuildingNumber }}</td>
-                    <td>{{ location.Room }}</td>
-                    <td>{{ metric.Time }}</td>
+                    <tr> {# Spec's Values #}
+                        <td>{{ server.Os }}</td>
+                        <td>{{ server.Cpu }} | {{ server.CpuCores }}</td>
+                        <td>{{ server.Gpu }}</td>
+                        <td>{{ server.Memory }}GB</td>
+                        <td>{{ server.Model }}</td>
+                        <td>{{ location.BuildingNumber }}</td>
+                        <td>{{ location.Room }}</td>
+                        <td>{{ metric.Time }}</td>
 
-                </tr>
+                    </tr>
                 </tbody>
             </table>
 
