--- a/templates/Usage-GPU.html
+++ b/templates/Usage-GPU.html
@@ -19,20 +19,15 @@
     </div>
 
     <!--Home Button and Server-->
-    <div class="row mt-3 text-center"> {# {# Home button & Rack & Server Names  #}
-
-        <div class="col-2"> {# Home Button #}
-            <a class="btn btn-secondary btn-lg" href="/" role="button">Home</a>
-        </div>
-
-        <div class="col-10 "> {# Rack & Server Names #}
-            <div class="card">
-                <div class="card-body border border-dark font-weight-bold">
-                    <h5>Rack: {{ rack.Name }} | Server: {{ server.ServerName }}</h5>
-                </div>
+    <div class="mt-3 text-center"> {# Home button & Rack & Server Names #}
+        <div class="row card-body border border-dark font-weight-bold">
+            <div class="text-left">
+                <a class="btn btn-secondary btn-lg"  href="/" role="button">Home</a>
+            </div>
+            <div class="col-10">
+                <h2 class="text-center">Rack: {{ rack.Name }} | Server: {{ server.ServerName }}</h2>
             </div>
         </div>
-
     </div>
 
     {#    </div>#}
