--- a/templates/Usage-CPUTemp.html
+++ b/templates/Usage-CPUTemp.html
@@ -74,6 +74,7 @@
                 {# The type of chart we want to create #}
                 type: 'line',
 
+            {% if hi == 'xxx' %}
                 {# The data for our dataset #}
                 data: {
                     labels: [{% for d in date %} "{{ d }}", {% endfor %}], {# Dates #}
@@ -82,37 +83,51 @@
                         backgroundColor: 'rgb(173, 216, 230)',
                         borderColor: 'rgb(0,0,0)',
                         data: [{% for u in usage %} "{{ u }}", {% endfor %}] {# Usages #}
+                    }]
+                },
+            {% else %}
+                data: {
+                    labels: [{% for d in date %} "{{ d }}", {% endfor %}], {# Dates #}
+                    datasets: [{
+                        label: 'HIGH',
+                        fill: false,
+                        backgroundColor: 'rgba(255,33,0,0.71)',
+                        borderColor: 'rgb(255,33,0)',
+                        data: [{% for h in hi %} "{{ h }}", {% endfor %}] {# Usages #}
+                    }, {
+                        label: 'LOW',
+                        fill: false,
+                        backgroundColor: 'rgba(64,255,0,0.71)',
+                        borderColor: 'rgb(64,255,0)',
+                        data: [{% for l in lo %} "{{ l }}", {% endfor %}]
+                    }, {
+                        label: 'Average',
+                        fill: false,
+                        backgroundColor: 'rgba(255,223,0,0.71)',
+                        borderColor: 'rgb(255,223,0)',
+                        data: [{% for a in avg %} "{{ a }}", {% endfor %}]
                     }
-                    {#{#}
-                    {#    label: 'Hi',#}
-                    {#    backgroundColor: 'rgb(173, 216, 230)',#}
-                    {#    borderColor: 'rgb(255,37,0)',#}
-                    {#    data: [{% for u in usage %} "{{ u }}", {% endfor %}] {# Usages #}
-                    {##}
-                    {#{#}
-                    {#    label: 'Lo',#}
-                    {#    backgroundColor: 'rgb(173, 216, 230)',#}
-                    {#    borderColor: 'rgb(78,255,0)',#}
-                    {#    data: [{% for u in usage %} "{{ u }}", {% endfor %}] {# Usages #}
-                    {##}
                     ]
                 },
+            {% endif %}
+
 
                 {# Configuration options go here #}
                 options: {
-                        legend: {display: false}
-                    }
+                    legend: {display: false}
+                }
             });
         </script>
     </div>
 
+    {% if lo == 'xxx' %}
     <div class="row"> {# CPU Usage table #}
         <div class="col mt-5 mb-5">
             <table class="table table-striped table-bordered">
                 <thead class="table-dark">
                 <tr>
                     <th scope="col">Date/Time</th>
-                    <th scope="col">CPU Usage (%): Hi-Avg-Low</th>
+                    <th scope="col">CPU Usage (%):</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -126,5 +141,32 @@
             </table>
         </div>
     </div>
+    {% else %}
+        <div class="row"> {# CPU Usage table #}
+            <div class="col mt-5 mb-5">
+                <table class="table table-bordered">
+                    <thead class="table-dark">
+                    <tr>
+                        <th scope="col">Date/Time</th>
+                        <th scope="col">High</th>
+                        <th scope="col">Average</th>
+                        <th scope="col">Low</th>
+
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for d, h, a, l in zip(date, hi, avg, lo) %}
+                        <tr>
+                            <td>{{ d }}</td>
+                            <td class="table-danger">{{ h }}%</td>
+                            <td class="table-warning">{{ a }}%</td>
+                            <td class="table-success">{{ l }}%</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    {% endif %}
 
 {% endblock content %}
