--- a/templates/Usage-CPUTemp.html
+++ b/templates/Usage-CPUTemp.html
@@ -6,6 +6,8 @@
 
 {% block title %}{# Overides layout.html default title #}
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script> {# Script needed for chart.js #}
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css">
 
     <title>CPU-Usage - {{ server.ServerName }}</title> {# Title - shown in tab on browser #}
 {% endblock title %}
@@ -37,28 +39,22 @@
         </div>
     </div>
 
-    <div class="row text-center mt-3 ml-auto"> {# forms for chard date range | NOT CURRENTLY WORKING #}
-        <div class="col-12">
-            <form method="post">
-                {{ form.csrf_token }}
-                {{ render_field(form.startdate) }}
-                {{ render_field(form.enddate) }}
-                <input type="submit" value="update">
+    <div class="row text-center mt-3"> {# forms for chard date range #}
 
-                {#                <div class="input-group mb-3">#}
-                {#                    <div class="input-group-prepend">#}
-                {#                        <span class="input-group-text" id="basic-addon3">Start & End Date</span>#}
-                {#                    </div>#}
-                {#                    <input type="text" placeholder="09/01/2019" aria-label="start date" class="form-control">#}
-                {#                    <input type="text" placeholder="10/01/2019" aria-label="end date" class="form-control">#}
-                {#                </div>#}
-                {#            </div>#}
-                {#            <div class="col-2">#}
-                {#                <a class="btn btn-success" href="#" onclick="window.location.reload(true);" role="button">Refresh</a>#}
-                {#                <input type="submit" value="update">#}
-                {#            </div>#}
-            </form>
-        </div>
+        <form method="post">
+            <div class="col-3">
+
+                {{ form.csrf_token }}
+                {{ form.startdate }}
+            </div>
+            <div class="col-3">
+                {{ form.enddate }}
+            </div>
+            <div class="col-3">
+                <input type="submit" value="update">
+            </div>
+        </form>
+
     </div>
 
 
@@ -168,5 +164,16 @@
             </div>
         </div>
     {% endif %}
+
+
+    {{ super() }}
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            $('#datepick').datetimepicker();
+        });
+    </script>
 
 {% endblock content %}
