--- a/templates/MasterList.html
+++ b/templates/MasterList.html
@@ -9,26 +9,21 @@
 
 {% block content %}
 
-    <div class="row mt-3 text-center"> {# Row for page header #}
+    <div class="row mt-3 text-center"> {# Page header #}
         <div class="col-12 ml-auto p-3 mb-2 bg-secondary text-white">
             <h1>Server System Monitoring Tool</h1>
         </div>
     </div>
 
-    <div class="row mt-3 text-center"> {# Home button and Page title #}
-
-        <div class="col-2"> {# Home Button #}
-            <a class="btn btn-secondary btn-lg" href="/" role="button">Home</a>
-        </div>
-
-        <div class="col-10 "> {# Page title #}
-            <div class="card">
-                <div class="card-body border border-dark font-weight-bold">
-                    <h3>Master List</h3>
-                </div>
+    <div class="mt-3 text-center"> {# Home button & MasterList #}
+        <div class="row card-body border border-dark font-weight-bold">
+            <div class="text-left">
+                <a class="btn btn-secondary btn-lg"  href="/" role="button">Home</a>
+            </div>
+            <div class="col-10">
+                <h2 class="text-center">Master List</h2>
             </div>
         </div>
-
     </div>
 
     <div class="row mt-3 text-center"> {# Master List table #}
