--- a/templates/RealTimeDataOverviewTemp.html
+++ b/templates/RealTimeDataOverviewTemp.html
@@ -137,54 +137,56 @@
 
     <div class="row mt-3 text-center"> {# Database Table #}
         <div class="col-lg-12 ml-auto">
-
-            <table class="table table-bordered table-striped">
-                <thead class="table-dark">
-                <tr>
-                    <th scope="col">Database ID</th>
-                    <th scope="col">Database Name</th>
-                    <th scope="col">Status</th>
-                </tr>
-                </thead>
-
-                <tbody>
-
-                {% for db in database %} {# Gets all databases for this server #}
+            {% if database != 0 %}
+                <table class="table table-bordered table-striped">
+                    <thead class="table-dark">
                     <tr>
-                        <th scope="row">{{ db.DatabaseId }}</th>
-                        <th scope="row">{{ db.DatabaseName }}</th>
-                        <td>{{ db.Status }}</td>
+                        <th scope="col">Database ID</th>
+                        <th scope="col">Database Name</th>
+                        <th scope="col">Status</th>
                     </tr>
-                {% endfor %}
+                    </thead>
 
-                </tbody>
-            </table>
+                    <tbody>
+
+                    {% for db in database %} {# Gets all databases for this server #}
+                        <tr>
+                            <th scope="row">{{ db.DatabaseId }}</th>
+                            <th scope="row">{{ db.DatabaseName }}</th>
+                            <td>{{ db.Status }}</td>
+                        </tr>
+                    {% endfor %}
+
+                    </tbody>
+                </table>
+            {% endif %}
         </div>
     </div>
-    <div class="row mt-3 text-center"> {# Database Table #}
+    <div class="row mt-3 text-center"> {# Running Job Table #}
         <div class="col-lg-12 ml-auto">
-
-            <table class="table table-bordered table-striped">
-                <thead class="table-dark">
-                <tr>
-                    <th scope="col">Job Name</th>
-                    <th scope="col">User</th>
-                    <th scope="col">Remaining Time</th>
-                </tr>
-                </thead>
-
-                <tbody>
-
-                {% for rj in runningjob %} {# Gets all databases for this server #}
+            {% if runningjob != 0 %}
+                <table class="table table-bordered table-striped">
+                    <thead class="table-dark">
                     <tr>
-                        <th scope="row">{{ rj.JobName }}</th>
-                        <th scope="row">{{ rj.User }}</th>
-                        <td>{{ rj.ReservedTime }}</td>
+                        <th scope="col">Job Name</th>
+                        <th scope="col">User</th>
+                        <th scope="col">Remaining Time</th>
                     </tr>
-                {% endfor %}
+                    </thead>
 
-                </tbody>
-            </table>
+                    <tbody>
+
+                    {% for rj in runningjob %} {# Gets all databases for this server #}
+                        <tr>
+                            <th scope="row">{{ rj.JobName }}</th>
+                            <th scope="row">{{ rj.User }}</th>
+                            <td>{{ rj.ReservedTime }}</td>
+                        </tr>
+                    {% endfor %}
+
+                    </tbody>
+                </table>
+            {%  endif %}
         </div>
     </div>
 
