--- a/templates/Usage-GPU.html
+++ b/templates/Usage-GPU.html
@@ -33,7 +33,7 @@
     {#    </div>#}
     <div class="row text-center m-2"> {# Displays this servers GPU usage #}
         <div class="col-12">
-            <h2 class="text-danger"> GPU Usage: <b>{{ ametric.Gpu }}%</b></h2>
+            <h2 class="text-{{ color }}"> GPU Usage: <b>{{ ametric.Gpu }}%</b></h2>
         </div>
     </div>
 
