--- a/templates/Usage-Ping.html
+++ b/templates/Usage-Ping.html
@@ -23,7 +23,7 @@
     <div class="mt-3 text-center"> {# Home button & Rack & Server Names #}
         <div class="row card-body border border-dark font-weight-bold">
             <div class="text-left">
-                <a class="btn btn-secondary btn-lg"  href="/" role="button">Home</a>
+                <a class="btn btn-secondary btn-lg" href="/" role="button">Home</a>
             </div>
             <div class="col-10">
                 <h2 class="text-center">Rack: {{ rack.Name }} | Server: {{ server.ServerName }}</h2>
@@ -31,10 +31,10 @@
         </div>
     </div>
 
-{#    </div>#}
+    {#    </div>#}
     <div class="row text-center m-2"> {# Displays this servers RAM usage #}
         <div class="col-12">
-            <h2 class="text-danger"> Ping Status: <b>{{ ametric.PingLatency }} ms - {{status}}</b></h2>
+            <h2 class="text-{{ color }}"> Ping Status: <b>{{ ametric.PingLatency }} ms - {{ status }}</b></h2>
         </div>
     </div>
 
@@ -88,6 +88,7 @@
                         labels: [{% for d in date %} "{{ d }}", {% endfor %}], {# Dates #}
                         datasets: [{
                             label: 'usage',
+                            steppedLine: 'middle',
                             backgroundColor: 'rgb(122,211,132)',
                             borderColor: 'rgb(0,0,0)',
                             data: [{% for u in usage %} "{{ u }}", {% endfor %}] {# Usages #}
