--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
 <head>
 
     <meta charset="UTF-8">
-
+    {{ fontawesome_html() }}
     {% block title %} {# Title given by other pages #}
     {% endblock %}
 
