--- a/templates/RealTimeDataOverviewTemp.html
+++ b/templates/RealTimeDataOverviewTemp.html
@@ -115,8 +115,9 @@
 
     </div>
 
-    <div class="row mt-3 text-center"> {# Services Table #}
+    <div class="row mt-5 text-center"> {# Services Table #}
         <div class="col-lg-12 ml-auto">
+            <div class="text-light p-2 h3" style="background-color: #40b3ff">services</div>
 
             <table id="service" class="display">
                 <thead>
@@ -143,9 +144,10 @@
         </div>
     </div>
 
-    <div class="row mt-3 text-center"> {# Database Table #}
+    <div class="row mt-5 text-center"> {# Database Table #}
         <div class="col-lg-12 ml-auto">
             {% if database != 0 %}
+                <div class="text-light p-2 h3" style="background-color: #40b3ff">Databases</div>
                 <table id="database" class="display">
                     <thead>
                     <tr>
@@ -170,9 +172,10 @@
             {% endif %}
         </div>
     </div>
-    <div class="row mt-3 text-center"> {# Running Job Table #}
+    <div class="row mt-5 text-center"> {# Running Job Table #}
         <div class="col-lg-12 ml-auto">
             {% if runningjob != 0 %}
+                <div class="text-light p-2 h3" style="background-color: #40b3ff">Running Jobs</div>
                 <table id="jobs" class="display">
                     <thead>
                     <tr>
