--- a/templates/Usage-Disk.html
+++ b/templates/Usage-Disk.html
@@ -136,23 +136,22 @@
                     <tr>
                         <th>Date/Time</th>
                         <th>Total</th>
-                        <th>Disk A (%): Hi-Avg-Low</th>
-                        <th>Disk B (%): Hi-Avg-Low</th>
-                        <th>Disk C (%): Hi-Avg-Low</th>
-                        <th>Disk D (%): Hi-Avg-Low</th>
+                        {% for p in partuse.keys() %}
+                            <th>{{ p }}</th>
+                        {% endfor %}
                     </tr>
                     </thead>
                     <tbody>
-                    {% for date, u, a, b, c, d in zip(date, usage, aUsage, bUsage, cUsage, dUsage) %}
-                            <tr>
-                                <td>{{ date }}</td>
-                                <td>{{ u }}%</td>
-                                <td>{{ a }}%</td>
-                                <td>{{ b }}%</td>
-                                <td>{{ c }}%</td>
-                                <td>{{ d }}%</td>
-                            </tr>
-                        {% endfor %}
+                    {#                    {% for date, u, a, b, c, d in zip(date, usage, aUsage, bUsage, cUsage, dUsage) %}#}
+                    {#                            <tr>#}
+                    {#                                <td>{{ date }}</td>#}
+                    {#                                <td>{{ u }}%</td>#}
+                    {#                                <td>{{ a }}%</td>#}
+                    {#                                <td>{{ b }}%</td>#}
+                    {#                                <td>{{ c }}%</td>#}
+                    {#                                <td>{{ d }}%</td>#}
+                    {#                            </tr>#}
+                    {#                        {% endfor %}#}
 
 
                     </tbody>
